fix: additional post list card overflow y issue

--- a/styles/blog/AdditionalPostList.module.css
+++ b/styles/blog/AdditionalPostList.module.css
@@ -40,7 +40,7 @@
 
 .card {
   min-width: 220px;
-  height: 100%;
+  height: 99%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
